[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hiclaw"
version = "0.1.0"
description = "CLI scheduler that sends timed messages through Claude Code"
readme = "README.md"
authors = [{name = "HiClaw"}]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hiclaw = "hiclaw.cli:main"

[tool.setuptools]
packages = ["hiclaw"]
